--- a/_posts/2019-08-21-Siesta.md
+++ b/_posts/2019-08-21-Siesta.md
@@ -1,16 +1,15 @@
 ---
 layout:     post
-title:      明日方舟第二次大活动仅剩六天
-subtitle:   欢迎来到Siesta市的黑曜石音乐节
+title:      明日方舟第二次大型活动即将开启
+subtitle:   欢迎来到汐斯塔市参加“黑曜石音乐节”！
 date:       2019-08-21
 author:     Riki
 header-img: img/post-bg-kuaidi.jpg
 catalog: true
 tags:
     - 明日方舟
-    - Siesta
 ---
 
-## 活动预告
-
-	详见微博
+## 点进来你会发现
+啥也没有，哈哈哈
+	
