--- a/_posts/2019-08-20-漱玉.md
+++ b/_posts/2019-08-20-漱玉.md
@@ -13,4 +13,9 @@ tags:
 ## 点进来你会发现
 
 啥也没有，哈哈哈
+
+## 不过
+
+有一个
+![avatar](http://b-ssl.duitang.com/uploads/item/201712/26/20171226104351_XwjWR.jpeg)
 	
