--- a/_posts/2019-08-22-DE.md
+++ b/_posts/2019-08-22-DE.md
@@ -4,7 +4,7 @@ title:      The comparison of different DE Analysis methods in microbiome sequen
 subtitle:   Comparison of Type-I error rate and power
 date:       2019-08-22
 author:     Riki
-header-img: img/post-bg-kuaidi.jpg
+header-img: img/microbiome.png
 catalog: true
 tags:
     - study
