--- a/_posts/2019-08-22-DE.md
+++ b/_posts/2019-08-22-DE.md
@@ -58,7 +58,7 @@ There are three parameters in a ZINB distribution:
 
 We use a Gamma-Poisson mixture model to generate negative binomial variables:
 ```
-rZINB <- function(n, param=NULL, m, t, p) {
+rZINB <- function(n, param=NULL, m, t, p) 
   if (!is.null(param)) {m = param[1]; t = param[2]; p = param[3]}
   
   rvec <- rgamma(n, shape = m/t, rate = 1/t)
@@ -71,10 +71,8 @@ rZINB <- function(n, param=NULL, m, t, p) {
 
 After this Gamma-Poisson mixture process, we could get a random variable which has following distribution:  
 
-$$P(X=x) = \begin{cases}
-\pi +(1-\pi )(\frac{1}{\theta +1})^{\frac{\mu}{\theta}} & x=0 \\
-(1-\pi ) \tbinom{x+\frac{\mu}{\theta}-1}{x} (\frac{1}{\theta +1})^{\frac{\mu}{\theta}} (\frac{\theta}{\theta +1})^{x}  & x>=1
-\end{cases}$$
+![mc0aTA.png](https://s2.ax1x.com/2019/08/25/mc0aTA.png)
+
 
 
 
